--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul>
                 <li>TCS Codevita Season 10 Rank Certificate (Global Rank: 5360), 2022.</li>
                 <li>Peer Evaluation on C programming skills, 2022.</li>
-                <li>Python Instructor for 3rd yr B-Tech Students</li>
+                <li>Python Instructor for 3rd year B-Tech Students</li>
             </ul>
 </body>
 </html>
